# pretalx-llm

./: CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml
pretalx_llm/: apps.py  cache_utils.py  comparison.py  exceptions.py  forms.py  models.py  redislock.py  signals.py  software.py  tasks.py  urls.py  utils.py  views.py
pretalx_llm/migrations/: 0001_initial.py  0002_llmuserpreference_llmuserpreferenceembedding_and_more.py  0003_llmembedding_abstract.py  0004_delete_old_embeddings.py  0005_add_contenthash.py
pretalx_llm/static/pretalx_llm/js/: scatterplot.js
pretalx_llm/templates/pretalx_llm/: globalsettings.html  llm_filter_form.html  llm_graph_form.html  llm_reviewers_form.html  llm_search_form.html  llm_suggestions_form.html  model_problem.html  preferences.html  reviewers.html  search.html  settings.html  similarities.html  similarities_graph.html  submission_line.html  suggestions.html
